--- a/home.html
+++ b/home.html
@@ -75,13 +75,22 @@
       <div class="row">
 
         <div class="six columns">
+          <h4>In-Cahoots</h4>
+          <p style="text-align: justify;">In Cahoots is a Django web application which provides a solution to my University's following problems:
+          </br>•	Societies have a capability of helping other society’s development with their respective skillset.
+          </br>•	Societies often struggle to find meaningful projects and activities to engage their members with.
+        </br>A platform that would facilitate societies helping one another would, not only accelerate development of societies, but also provide societies with meaningful projects. “In Cahoots” is just that – an online platform that could become a sustained ecosystem of societies helping one another.
+ <br/><i>See the source code <a href="https://github.com/camwebby/in-cah-final" style="font-weight: 900;">here</a></i></p>
+        </div>
+
+        <div class="six columns">
           <h4>Articial Neural Network Builder</h4>
           <p style="text-align: justify;">A simple python class that allows one to build a neural network with a specified amount of neurons and synapses. <br/><i>See the source code <a href="https://github.com/camwebby/ANN-Builder" style="font-weight: 900;">here</a></i></p>
         </div>
 
         <div class="six columns">
-          <h4>Bitcoin Sentiment Finder</h4>
-          <p>A python webcrawler that scrapes various bitcoin news outlets to find articles from which a sentiment can be derived. <br/><i>See the source code <a href="https://github.com/camwebby/bitcoinSentiment">here</a></i></p>
+          <h4>DotA2 Machine Learning Analysis</h4>
+          <p>I wanted to estimate the extent to which hero selection within the popular video game, could explain which team will be victorious. <br/><i>See the source code <a href="https://github.com/camwebby/DotA-Machine-Learning">here</a></i></p>
         </div>
       </div>
     </div>
@@ -91,25 +100,14 @@
     <div class="row">
 
       <div class="six columns">
-        <h4>DotA2 Machine Learning Analysis</h4>
-        <p style="text-align: justify;">I wanted to estimate the extent to which hero selection within the popular video game, could explain which team will be victorious. <br/><i>See the source code <a href="https://github.com/camwebby/bitcoinSentiment">here</a></i></p>
+        <h4>Data Puller for Higher Education Statistics</h4>
+        <p style="text-align: justify;">This project contains the scripts utilised in my report on Graduate Salaries shown below in the 'Writing and Acedemia' section. <br/><i>See the source code <a href="https://github.com/camwebby/unistats-functions-python-">here</a></i></p>
       </div>
 
       <div class="six columns">
-        <h4>University Course Finder</h4>
-        <p>Yeah basically the project was something to do with something or other <br/><i>See the source code <a href="https://github.com/camwebby/bitcoinSentiment">here</a></i></p>
+        <h4>This Website</h4>
+        <p style="text-align: justify;">Certainly not least, I constructed this minimalistic wesbite to showcase some of my projects (and itself).<br/><i>See the source code <a href="https://github.com/camwebby/portfolio_page">here</a></i></p>
       </div>
-    </div>
-
-    <br>
-
-    <div class="row">
-
-      <div class="six columns">
-        <h4>Data puller for Higher Education statistics</h4>
-        <p style="text-align: justify;">I wanted to estimate the extent to which hero selection within the popular video game, could explain which team will be victorious. <br/><i>See the source code <a href="https://github.com/camwebby/bitcoinSentiment">here</a></i></p>
-      </div>
-
 
     </div>
   </div>
@@ -141,12 +139,29 @@
         <div class="six columns"><img src="writingImage.png" style="width: 100%;"></img></div>
 
         <div class="six columns">
-        <h5>Bang for the Buck</h5>
+        <h5>Higher Education Report</h5>
         <p style="text-align: justify;">Do economics! Do engineering! Do medicine! The echoed sentiments from parents
          and half-known relatives as you mention your degree consideration plans, are unnuanced
          sentiments at best. Within my article, I explored which degrees allow for promising graduate
          remuneration, and crucially, the key caveats that go along with that information. <br/> <i>See the written piece <a href="https://medium.com/@camwebbyhalsall3/bang-for-the-buck-how-to-really-think-about-which-uk-degrees-offer-the-best-prospects-4ffcef5870ca">here</a></i></p>
         </div>
+      </div>
+    </div>
+
+    </br>
+
+    <div id="WritContent">
+
+      <div class="row">
+        <div class="six columns">
+          <h5>CFA Equity Research Report</h5>
+          <p>Myself and my team of four, competed in the Chartered Financial Analyst 2018/19 equity research challenge. We covered the British greeting card company, Card Factory.
+          <br/> <i>See the written piece <a href="TheReport2.pdf">here</a></i>
+          </p>
+        </div>
+
+        <div class="six columns"><img src="ebitda_bridge.png" style="width: 100%;"></img></div>
+
       </div>
     </div>
 
@@ -164,11 +179,11 @@
 
     <div id="MedContent">
       <div class="row">
-        <p class="eight columns"><iframe width="560" height="315" src="https://www.youtube.com/embed/Yae3k6CCAMM?rel=0&amp;showinfo=0" frameborder="0" allow="encrypted-media" allowfullscreen></iframe></p>
+        <p class="eight columns"><iframe width="95%" height="315" src="https://www.youtube.com/embed/Yae3k6CCAMM?rel=0&amp;showinfo=0" frameborder="0" allow="encrypted-media" allowfullscreen></iframe></p>
         <p class="four columns" style="text-align: justify;">
           <h4> Curtains for Cash</h4>
           The following is my entry to the Royal Economic Society's undergraduate video competition.
-          The description: All over the world, the use of paper money is slowly withering.
+          The description: All over the world, the use of paper money is slowly dwindling.
           This short animation discusses the whys, the whats, and the
           hows, of money's future in our uncertain economic world.
         </p>
