--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="theme-color" content="#9966CC" />
 
-    <title>Cam Webby</title>
+    <title>Cam Webby!</title>
     <meta name="description" content="Cam Webby's Personal Projects">
 
     <link rel="stylesheet" href="css/normalize.css">
